# libpaseto

./: CMakeLists.txt  LICENSE  README.md  example.c  paseto.pc.in
examples/: example.c  example_v2_public.c  gen-keys.c  paseto-v2-local-decrypt.c  paseto-v2-local-encrypt.c
include/: paseto++.h  paseto.h
src/: helpers.c  helpers.h  paseto.c  paseto_v2_local.c  paseto_v2_public.c  paseto_v2_symmetric.c
test/: helpers.c  helpers.h  main.c  test.c  test.h  v2publicvectors.c  v2publicvectors.csv  v2vectors.c  v2vectors.csv  v2vectors.h
